Fix bugs and add some new features:  - Added new chip overview chart (autogenerated from attinys.props)  - Fix premature "Done" popup when writing code hex to target  - Add links to Microchip attiny info pages in overview chart  - Fix bug that allowed selection of folder in "Open" menu  = Fix MarkupView's "BACK" to restore scroll position on prior page  - Fix bug in ChipLayout tooltip display  - Reworked how Programmer select menu works  - Update readme